提交项目框架

--- a/index.html
+++ b/index.html
@@ -11,29 +11,59 @@
 <body>
     <!-- 导航 -->
     <div class="nav">
-        <div class="nav-fl">
-            <span class="nav-fl-span">文化青年，品质生活~</span>
+        <div class="nav-little">
+            <div class="nav-fl">
+                <span class="nav-fl-span">文化青年，品质生活~</span>
+            </div>
+            <div class="nav-fr clearfix">
+                <ul class="ul-first clearfix">
+                    <li class="li-first li-first-hover">
+                        <a href="#" class="li-first-a">登录</a>
+                    </li>
+                    <li class="li-first li-first-hover">
+                        <a href="#" class="li-first-a">注册</a>
+                    </li>
+                    <li class="li-first li-first-hover">
+                        <a href="#" class="li-first-a">我的订单</a>
+                    </li>
+                    <li class="li-first">
+                        <a href="#" class="li-first-a">
+                            网站导航
+                            <i class="li-first-bg1"></i>
+                        </a>
+                        <ul class="nav-second-ul clearfix">
+                            <li class="second-ul-li1">
+                                <h4><a href="#">频道</a></h4>
+                                <div class="ul-li1-left">
+                                    <a href="#" class="ul-li-left-a">聚特惠</a>
+                                    <a href="#" class="ul-li-left-a">学生专区</a>
+                                    <a href="#" class="ul-li-left-a">欢聚橙卡</a>
+                                    <a href="#" class="ul-li-left-a">演出日历</a>
+                                    <a href="#" class="ul-li-left-a">明星库</a>
+                                    <a href="#" class="ul-li-left-a">资讯库</a>
+                                    <a href="#" class="ul-li-left-a">剧目库</a>
+                                    <a href="#" class="ul-li-left-a">场馆库</a>
+                                    <a href="#" class="ul-li-left-a">积分商城</a>
+                                    <a href="#" class="ul-li-left-a">精彩专题</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="li-first li-fourth">
+                        <a href="#" class="li-first-a li-first-last-a">
+                            <i class="li-first-bg2"></i>
+                            手机购票
+                        </a>
+                        <div class="nav-ul-second">
+                            <a href="#">
+                                <img src="http://basic.juooo.com//Home/web-4.1.1/images/common/mobile.png" alt="">
+                            </a> 
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="nav-fr clearfix">
-            <ul class="ul-first clearfix">
-                <li class="li-first">
-                    <a href="#" class="li-first-a">登录</a>
-                </li>
-                <li class="li-first">
-                    <a href="#" class="li-first-a">注册</a>
-                </li>
-                <li class="li-first">
-                    <a href="#" class="li-first-a">我的订单</a>
-                </li>
-                <li class="li-first">
-                    <a href="#" class="li-first-a">网站导航</a>
-                </li>
-                <li class="li-first li-first-last">
-                    <img src="" alt="">
-                    <a href="#" class="li-first-a">手机购票</a>
-                </li>
-            </ul>
-        </div>
+        
     </div>
     <div class="nav-img">
         <img src="http://image.juooo.com/group1/M00/01/94/rAoKmVu7IUaAODEvAAB7BEAM-v4426.jpg" alt="" class="img">
