--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <div class="tips clearfix">
             <div class="tips1 clearfix">
                 <a href="#">
-                    <i class="tips1-pic"></i>
+                    <i class="tips1-pic tips1-pic1"></i>
                     <div class="tips1-word">
                         <p class="tips1-p1">积分商城</p>
                         <p class="tips1-p2">用积分，享0元购票</p>
@@ -386,46 +386,46 @@
             </div>
             <div class="tips1 clearfix">
                 <a href="#">
-                    <i class="tips1-pic"></i>
+                    <i class="tips1-pic tips1-pic2"></i>
                     <div class="tips1-word">
-                        <p class="tips1-p1">积分商城</p>
-                        <p class="tips1-p2">用积分，享0元购票</p>
+                        <p class="tips1-p1">欢聚橙卡</p>
+                        <p class="tips1-p2">33元起看演出</p>
                     </div>
                 </a>
             </div>
             <div class="tips1 clearfix">
                 <a href="#">
-                    <i class="tips1-pic"></i>
+                    <i class="tips1-pic tips1-pic3"></i>
                     <div class="tips1-word">
-                        <p class="tips1-p1">积分商城</p>
-                        <p class="tips1-p2">用积分，享0元购票</p>
+                        <p class="tips1-p1">聚特惠</p>
+                        <p class="tips1-p2">每天优惠不止一点</p>
                     </div>
                 </a>
             </div>
             <div class="tips1 clearfix">
                 <a href="#">
-                    <i class="tips1-pic"></i>
+                    <i class="tips1-pic tips1-pic4"></i>
                     <div class="tips1-word">
-                        <p class="tips1-p1">积分商城</p>
-                        <p class="tips1-p2">用积分，享0元购票</p>
+                        <p class="tips1-p1">学生专区</p>
+                        <p class="tips1-p2">学生购票，低至5折</p>
                     </div>
                 </a>
             </div>
             <div class="tips1 clearfix">
                 <a href="#">
-                    <i class="tips1-pic"></i>
+                    <i class="tips1-pic tips1-pic5"></i>
                     <div class="tips1-word">
-                        <p class="tips1-p1">积分商城</p>
-                        <p class="tips1-p2">用积分，享0元购票</p>
+                        <p class="tips1-p1">精彩专题</p>
+                        <p class="tips1-p2">演出专题精彩汇聚</p>
                     </div>
                 </a>
             </div>
             <div class="tips1 tips-last clearfix">
                 <a href="#">
-                    <i class="tips1-pic"></i>
+                    <i class="tips1-pic tips1-pic6"></i>
                     <div class="tips1-word">
-                        <p class="tips1-p1">积分商城</p>
-                        <p class="tips1-p2">用积分，享0元购票</p>
+                        <p class="tips1-p1">演出日历</p>
+                        <p class="tips1-p2">演出信息一目了然</p>
                     </div>
                 </a>
             </div>
@@ -2118,8 +2118,8 @@
         </div>
     </div>
     <!-- 关于我们 -->
-    <div class="us">
-        <div class="us-little">
+    <div class="us clearfix">
+        <div class="us-little clearfix">
             <div class="us-left">
                 <p class="us-left-p1">帮助中心</p>
                 <p class="us-left-p2">
@@ -2127,6 +2127,82 @@
                     <a href="#" class="us-left-a">支付方式</a>
                     <a href="#" class="us-left-a">售后服务</a>
                 </p>
+                <p class="us-left-p2">
+                    <a href="#" class="us-left-a">购票指南</a>
+                    <a href="#" class="us-left-a">配送方式</a>
+                </p>
+            </div>
+            <div class="us-center">
+                <p class="us-center-p1">400-185-8666</p>
+                <p class="us-left-p2 us-center-p2">
+                    <a href="#" class="us-left-a">周一至周五：08:30-20:00</a>
+                </p>
+                <p class="us-left-p2 us-center-p3">
+                    <a href="#" class="us-left-a">周末：08:30-18:00</a>
+                </p>
+            </div>
+            <div class="us-right clearfix">
+                <div class="ticket">
+                    <img src="images/ticket.png" alt="">
+                        <p class="ticket-p">聚橙票务</p>   
+                </div>
+                <div class="ticket show">
+                    <img src="images/show.png" alt="">
+                    <p class="ticket-p">聚橙演艺</p>
+                </div>
+            </div>
+        </div>
+        <!-- footer -->
+        <div class="footer">
+            <div class="footer-little">
+                <div class="footer-top">
+                    <span class="footer-top-span">聚橙旗下子品牌：</span>
+                    <a href="#" class="footer-span-a">小橙堡</a>
+                    <a href="#" class="footer-span-a footer-span-a2">万有音乐系</a>
+                    <a href="#" class="footer-span-a">聚橙音乐剧</a>
+                </div>
+                <div class="footer-center clearfix">
+                    <div class="footer-center1 clearfix">
+                        <span class="footer-center1-span">高雅艺术商业联盟</span>
+                        <i class="footer-center-i footer-center-i1"></i>
+                        <i class="footer-center-i footer-center-i2"></i>
+                        <i class="footer-center-i footer-center-i3"></i>
+                        <i class="footer-center-i footer-center-i4"></i>
+                        <i class="footer-center-i footer-center-i5"></i>
+                    </div>
+                    <div class="footer-center1 clearfix">
+                        <span class="footer-center1-span">万有音乐商业联盟</span>
+                        <i class="footer-center-i footer-center-i6"></i>
+                        <i class="footer-center-i footer-center-i7"></i>
+                        <i class="footer-center-i footer-center-i8"></i>
+                    </div>
+                    <div class="footer-center1 clearfix footer-centerlast">
+                        <span class="footer-center1-span">亲子演出商业联盟</span>
+                        <i class="footer-center-i footer-center-i9"></i>
+                        <i class="footer-center-i footer-center-i10"></i>
+                        <i class="footer-center-i footer-center-i11"></i>
+                        <i class="footer-center-i footer-center-i12"></i>
+                    </div>
+                </div>
+                <div class="footer-down">
+                    <a href="#" class="footer-span-a ">关于我们</a>
+                    <a href="#" class="footer-span-a footer-span-ab">联系我们</a>
+                    <a href="#" class="footer-span-a ">加入我们</a>
+                    <a href="#" class="footer-span-a footer-span-ab">服务条款</a>
+                    <a href="#" class="footer-span-a ">媒体报道</a>
+                    <a href="#" class="footer-span-a footer-span-ab">合作伙伴</a>
+                    <a href="#" class="footer-span-a ">友情链接</a>
+                    <a href="#" class="footer-span-a footer-span-ab footer-span-ablast">网站地图</a>
+                </div>
+                <div class="footer-down2">
+                    <span class="footer-down2-span">Copyright 2007-2018 © 深圳市聚橙演艺联盟票务有限公司 | 粤ICP备17063893号-2 </span>
+                    <i class="footer-down2-i"></i>
+                    <span class="footer-down2-span">粤公网安备 44030502000578号</span>
+                </div>
+                <div class="footer-last">
+                    <i class="footer-last-i footer-last-i1"></i>
+                    <i class="footer-last-i footer-last-i2"></i>
+                </div>
             </div>
         </div>
     </div>
